# lab7timp

Report_07/: README.md
Report_07/cmake/: config.cmake
lab7/: CMakeLists.txt  README.md
